@@ -1,5 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
-<pkgmetadata>
-  <herd>virtualization</herd>
-</pkgmetadata>
+<pkgmetadata />
